# KnishIO-Client-Rust

./: .gitignore  Cargo.toml  README.md  build.rs  run-selftest.sh
.github/workflows/: ci.yml  publish.yml
docs/: GraphQL_Client.md
examples/: graphql_client_usage.rs  molecule_demo.rs  mutation_usage.rs  subscription_example.rs  test_basic_functionality.rs
src/: check_molecule.rs  lib.rs
src/atom/: mod.rs
src/auth/: mod.rs
src/client/: builder.rs  mod.rs
src/crypto/: mod.rs  simd.rs
src/error/: mod.rs
src/graphql/: connection_pool.rs  mod.rs  retry_policy.rs  websocket.rs
src/meta/: mod.rs
src/molecule/: builder.rs  mod.rs
src/mutation/: active_session.rs  claim_shadow_wallet.rs  create_identifier.rs  create_meta.rs  create_rule.rs  create_token.rs  create_wallet.rs  deposit_buffer_token.rs  link_identifier.rs  mod.rs  propose_molecule.rs  request_authorization.rs  request_authorization_guest.rs  request_tokens.rs  transfer_tokens.rs  withdraw_buffer_token.rs
src/policy_meta/: mod.rs
src/query/: active_session.rs  atom.rs  balance.rs  batch.rs  batch_history.rs  continu_id.rs  meta_type.rs  meta_type_via_atom.rs  mod.rs  policy.rs  token.rs  user_activity.rs  wallet_bundle.rs  wallet_list.rs
src/response/: mod.rs  standard_response.rs
src/rules/: callback.rs  condition.rs  mod.rs  rule.rs
src/subscribe/: active_session_subscribe.rs  active_wallet_subscribe.rs  create_molecule_subscribe.rs  mod.rs  simple_websocket.rs  wallet_status_subscribe.rs
src/token_unit/: mod.rs
src/types/: mod.rs
src/utils/: array.rs  decimal.rs  dot.rs  hex.rs  mod.rs  strings.rs
src/versions/: hash_atom.rs  mod.rs  version4.rs
src/wallet/: mod.rs
tests/: compute_patent_vectors.rs  cross_platform_vectors.rs  patent_vector_validation.rs  patent_vector_verification.rs
