[package]
name = "knishio-client"
version = "0.9.1"
edition = "2021"
rust-version = "1.75"  # Minimum supported Rust version for 2025 features
authors = ["Eugene Teplitsky <eugene@wishknish.com>"]
description = "Rust implementation of the Knish.IO SDK for interacting with Knish.IO decentralized anchor node validator infrastructure."
license = "GPL-3.0-or-later"
repository = "https://github.com/WishKnish/KnishIO-Client-Rust"
keywords = ["postquantum", "quantum-resistant", "xmss", "ml-kem", "decentralized"]
categories = ["cryptography", "network-programming", "api-bindings"]
readme = "README.md"
homepage = "https://knish.io"
exclude = ["target/", ".github/", "docs/", "*.md", "!README.md", ".DS_Store", "run-selftest.sh"]

# 2025 Rust best practices: Modern linting configuration
[lints.rust]
unsafe_code = "forbid"               # No unsafe code allowed
# missing_docs = "warn"              # Disabled for cleaner build output - SDK is functional
dead_code = "warn"                   # Warn on dead code
unused_imports = "warn"              # Warn on unused imports
unused_variables = "warn"            # Warn on unused variables

[lints.clippy]
# `all` carries priority -1 so the lower-priority group baseline is applied first and the entries
# below (at default priority 0) override it — without this, cargo's lint_groups_priority ambiguity
# leaves pedantic/nursery effectively on. (cycle 111)
all = { level = "deny", priority = -1 }   # The enforced gate — clippy::all is deny-clean (cycle 111)
# pedantic/nursery are the subjective kitchen-sink groups (~2800 mostly-cosmetic warnings); allowed
# so the gate is the genuinely-valuable clippy::all set, not a style firehose. priority -1 so the
# specific restriction lints below (unwrap/expect/panic, priority 0) override these groups.
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
unwrap_used = "warn"                 # Warn on unwrap() usage - gradually move to proper error handling
expect_used = "warn"                 # Warn on expect() usage
panic = "warn"                       # Warn on panic!() macro usage
# Specific clippy::all lints allowed by design (priority 0 overrides the all group). cycle 111:
too_many_arguments = "allow"         # several builders/ctors take many args by design
incompatible_msrv = "allow"          # MSRV not strictly enforced; SDK targets current stable
map_entry = "allow"                  # clippy's --fix for this is buggy here (E0382); pattern is fine
doc_lazy_continuation = "allow"      # doc-comment list indentation (cosmetic)
empty_line_after_doc_comments = "allow"  # doc-comment formatting (cosmetic)
needless_range_loop = "allow"        # indexed loops in the SHAKE/hash core (crypto) — hash-load-bearing
same_item_push = "allow"             # padding loops in the hash core — hash-load-bearing
vec_init_then_push = "allow"         # molecule atom-array building — hash-load-bearing
approx_constant = "allow"            # intentional decimal literals (utils/decimal) — not the exact PI const
field_reassign_with_default = "allow"  # builder/test construction patterns
should_implement_trait = "allow"     # deliberate API (e.g. custom from_str)
large_enum_variant = "allow"         # deliberate layout choice
todo = "warn"                        # Warn on TODO comments
unimplemented = "warn"               # Warn on unimplemented!() macro

[dependencies]
tokio = { version = "1.47", features = [
    "rt-multi-thread",      # Multithreaded runtime
    "macros",               # #[tokio::main] and #[tokio::test]
    "sync",                 # mpsc, Mutex, RwLock
    "time",                 # sleep, timeout
    "net",                  # TcpStream for WebSocket
    "io-util",              # AsyncReadExt, AsyncWriteExt
    "signal",               # Signal handling
] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha3 = "0.10"                    # For SHAKE256
sha2 = "0.10"                    # For PBKDF2
libcrux-ml-kem = "0.0.9"         # Pinned: formally verified ML-KEM (FIPS 203); 0.0.9 clears RUSTSEC-2026-0074 (libcrux-sha3 SHAKE)
hex = "0.4"
base64 = "0.22"
pbkdf2 = "0.12"                  # Key derivation
aes-gcm = "0.10"                  # AES-GCM encryption for ML-KEM768

# SIMD optimizations for crypto (2025 high performance)
tiny-keccak = { version = "2.0", features = ["shake", "keccak"] } # Compact Keccak with SHAKE256 support
aes = "0.8"                      # AES hardware acceleration (for CTR_DRBG)

# GraphQL
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Async utilities
futures = "0.3"
futures-util = "0.3"           # Stream utilities
tokio-tungstenite = "0.30.0"      # WebSocket support
tungstenite = "0.30.0"            # WebSocket protocol

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Utilities
rand = "0.9.3"
chrono = { version = "0.4", features = ["serde"] }
# Removed once_cell and lazy_static - using std::sync::LazyLock instead
uuid = { version = "1.10", features = ["v4", "serde"] }
num_cpus = "1.16"               # For system information in benchmarks

# String and number utilities
num-bigint = "0.4"
num-traits = "0.2"

# Optional SIMD acceleration - enabled per target architecture
[target.'cfg(target_arch = "x86_64")'.dependencies]
# AVX2 optimizations for x86_64
sha3-asm = { version = "0.1", optional = true }     # Assembly-optimized SHA-3

[target.'cfg(target_arch = "aarch64")'.dependencies] 
# NEON optimizations for ARM64 (Apple Silicon)
sha3-asm = { version = "0.1", optional = true }     # Assembly-optimized SHA-3

[features]
# SIMD feature flags for optional acceleration
default = []
simd-optimized = ["sha3-asm"]    # Enable SIMD optimizations
benchmark-mode = []              # Enable benchmarking-specific optimizations

[dev-dependencies]
# [[bench]]
# name = "crypto_bench"
# harness = false

# Self-test binary (follows JavaScript SDK pattern)
[[bin]]
name = "self-test"
path = "src/bin/self-test.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true